Move postgres db to standalone container

--- a/roles/tandoor-recipes/templates/.env.j2
+++ b/roles/tandoor-recipes/templates/.env.j2
@@ -17,13 +17,13 @@ TIMEZONE=Europe/Berlin
 # add only a database password if you want to run with the default postgres, otherwise change settings accordingly
 DB_ENGINE=django.db.backends.postgresql
 # DB_OPTIONS= {} # e.g. {"sslmode":"require"} to enable ssl
-POSTGRES_HOST=recipes-db
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_USER=djangouser
+POSTGRES_USER=postgres
 # ---------------------------- REQUIRED -------------------------
-POSTGRES_PASSWORD={{ vault_recipes_db_password }}
+POSTGRES_PASSWORD={{ vault_postgres_password }}
 # ---------------------------------------------------------------
-POSTGRES_DB=djangodb
+POSTGRES_DB=recipes
 
 # database connection string, when used overrides other database settings.
 # format might vary depending on backend
