Add jerry dns rewrite to adguard config

--- a/roles/adguard-home/templates/AdGuardHome.yaml.j2
+++ b/roles/adguard-home/templates/AdGuardHome.yaml.j2
@@ -79,6 +79,10 @@ dns:
     answer: {{ hostname }}
   - domain: '*.{{ hostname }}'
     answer: {{ hostname }}
+  - domain: '*.jerry'
+    answer: 10.10.0.1
+  - domain: 'jerry'
+    answer: 10.10.0.1
   blocked_services: []
   upstream_timeout: 10s
   local_domain_name: lan
