Migrate backup to b2

--- a/roles/resticker/templates/.env.j2
+++ b/roles/resticker/templates/.env.j2
@@ -1,5 +1,5 @@
-AZURE_ACCOUNT_NAME={{ vault_resticker_account_name }}
-AZURE_ACCOUNT_KEY={{ vault_resticker_account_key }}
-RESTIC_REPOSITORY=azure:jerry:/
+B2_ACCOUNT_ID={{ vault_resticker_account_id }}
+B2_ACCOUNT_KEY={{ vault_resticker_account_key }}
+RESTIC_REPOSITORY=b2:{{ vault_resticker_bucket_name }}:jerry
 RESTIC_PASSWORD={{ vault_resticker_password }}
 TZ=Europe/Berlin
