Add new server dns rewrite

--- a/roles/adguard-home/templates/AdGuardHome.yaml.j2
+++ b/roles/adguard-home/templates/AdGuardHome.yaml.j2
@@ -85,6 +85,8 @@ dns:
     answer: 10.10.0.5
   - domain: '*.sleepy'
     answer: 10.10.0.5
+  - domain: '*.mrmeeseeks'
+    answer: 192.168.178.80
   blocked_services: []
   upstream_timeout: 10s
   private_networks: []
