Move authelia to auth subdomain

--- a/roles/authelia/templates/configuration.yml.j2
+++ b/roles/authelia/templates/configuration.yml.j2
@@ -5,7 +5,7 @@
 
 # This secret can also be set using the env variables AUTHELIA_JWT_SECRET_FILE
 jwt_secret: yKoJddqzKVY2zvmVBAtiKYFSyqgq3cYo9y4uZDMg5az3mjzLcYVJnWH75vqjzDzQ
-default_redirection_url: https://authelia.{{ public_domain }}
+default_redirection_url: https://auth.{{ public_domain }}
 
 server:
   host: 0.0.0.0
