--- a/roles/tandoor-recipes/templates/.env.j2
+++ b/roles/tandoor-recipes/templates/.env.j2
@@ -3,8 +3,11 @@
 DEBUG=0
 SQL_DEBUG=0
 
+# HTTP port to bind to
+# TANDOOR_PORT=8080
+
 # hosts the application can run under e.g. recipes.mydomain.com,cooking.mydomain.com,...
-ALLOWED_HOSTS=*
+ALLOWED_HOSTS={{ service_name }}.{{ public_domain }}
 
 # random secret key, use for example `base64 /dev/urandom | head -c50` to generate one
 # ---------------------------- REQUIRED -------------------------
@@ -17,9 +20,9 @@ TIMEZONE=Europe/Berlin
 # add only a database password if you want to run with the default postgres, otherwise change settings accordingly
 DB_ENGINE=django.db.backends.postgresql
 # DB_OPTIONS= {} # e.g. {"sslmode":"require"} to enable ssl
-POSTGRES_HOST=postgres
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
+POSTGRES_USER=recipes
 # ---------------------------- REQUIRED -------------------------
 POSTGRES_PASSWORD={{ vault_postgres_password }}
 # ---------------------------------------------------------------
@@ -65,6 +68,10 @@ SHOPPING_MIN_AUTOSYNC_INTERVAL=5
 # when unset: 1 (true) - this is temporary until an appropriate amount of time has passed for everyone to migrate
 GUNICORN_MEDIA=0
 
+# GUNICORN SERVER RELATED SETTINGS (see https://docs.gunicorn.org/en/stable/design.html#how-many-workers for recommended settings)
+# GUNICORN_WORKERS=1
+# GUNICORN_THREADS=1
+
 # S3 Media settings: store mediafiles in s3 or any compatible storage backend (e.g. minio)
 # as long as S3_ACCESS_KEY is not set S3 features are disabled
 # S3_ACCESS_KEY=
@@ -74,6 +81,7 @@ GUNICORN_MEDIA=0
 # S3_QUERYSTRING_AUTH=1 # default true, set to 0 to serve media from a public bucket without signed urls
 # S3_QUERYSTRING_EXPIRE=3600 # number of seconds querystring are valid for
 # S3_ENDPOINT_URL= # when using a custom endpoint like minio
+# S3_CUSTOM_DOMAIN= # when using a CDN/proxy to S3 (see https://github.com/TandoorRecipes/recipes/issues/1943)
 
 # Email Settings, see https://docs.djangoproject.com/en/3.2/ref/settings/#email-host
 # Required for email confirmation and password reset (automatically activates if host is set)
@@ -83,11 +91,13 @@ GUNICORN_MEDIA=0
 # EMAIL_HOST_PASSWORD=
 # EMAIL_USE_TLS=0
 # EMAIL_USE_SSL=0
-# DEFAULT_FROM_EMAIL= # email sender address (default 'webmaster@localhost')
-# ACCOUNT_EMAIL_SUBJECT_PREFIX= # prefix used for account related emails (default "[Tandoor Recipes] ")
+# email sender address (default 'webmaster@localhost')
+# DEFAULT_FROM_EMAIL=
+# prefix used for account related emails (default "[Tandoor Recipes] ")
+# ACCOUNT_EMAIL_SUBJECT_PREFIX=
 
 # allow authentication via reverse proxy (e.g. authelia), leave off if you dont know what you are doing
-# see docs for more information https://vabene1111.github.io/recipes/features/authentication/
+# see docs for more information https://docs.tandoor.dev/features/authentication/
 # when unset: 0 (false)
 REVERSE_PROXY_AUTH=0
 
@@ -116,7 +126,7 @@ REVERSE_PROXY_AUTH=0
 # ENABLE_METRICS=0
 
 # allows you to setup OAuth providers
-# see docs for more information https://vabene1111.github.io/recipes/features/authentication/
+# see docs for more information https://docs.tandoor.dev/features/authentication/
 # SOCIAL_PROVIDERS = allauth.socialaccount.providers.github, allauth.socialaccount.providers.nextcloud,
 
 # Should a newly created user from a social provider get assigned to the default space and given permission by default ?
@@ -146,7 +156,12 @@ REVERSE_PROXY_AUTH=0
 #AUTH_LDAP_BIND_DN=
 #AUTH_LDAP_BIND_PASSWORD=
 #AUTH_LDAP_USER_SEARCH_BASE_DN=
+#AUTH_LDAP_TLS_CACERTFILE=
 
 # Enables exporting PDF (see export docs)
 # Disabled by default, uncomment to enable
 # ENABLE_PDF_EXPORT=1
+
+# Recipe exports are cached for a certain time by default, adjust time if needed
+# EXPORT_FILE_CACHE_DURATION=600
+
